# end-to-end-neural-diarization

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/gpu_vs_gpu_benchmark/: benchmarkCPUGPU.py
examples/ina_finetuning/: MyDatabase-small.yml  README.md  config.yml  ina_finetuning.py  modify_database_config.py  split_audio_files.sh  submit-slurm.py
examples/noise_sensitivity_experiment/: label.rttm  run_experiment.py
paper_reviews/: 10.1016.md  1907_10393.md  2101_09624.md  mm-publi-3152.md
src/dinum_diarization/evaluate/: analyze_dataset.py  dashboard.py  evaluate.py  predict.py  utils.py
src/dinum_diarization/finetune/: __init__.py  finetune.py  helpers.py
src/dinum_diarization/labelling/: __init__.py  generate_annotation_files.py  sd_rttm_convert.py
src/dinum_diarization/utils/: __init__.py  io.py  precompute_torchaudio_info.py  preprocessor.py
src/neural_diarization/evaluate/: __init__.py  analyze_dataset.py  dashboard.py  evaluate.py  predict.py  utils.py
src/neural_diarization/finetune/: __init__.py  finetune.py  helpers.py
src/neural_diarization/labelling/: __init__.py  generate_annotation_files.py  sd_rttm_convert.py
src/neural_diarization/utils/: __init__.py  io.py  precompute_torchaudio_info.py  preprocessor.py
