[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neural_diarization"
version = "1.0.1"
authors = [
  { name="Paul Cayet", email="paul.cayet@student-cs.fr" },
  { name="Nicolas Ibanez", email="nicolas.ibanez@student-cs.fr" },
  { name="Lucien Rondier", email="lucien.rondier@student-cs.fr" },
  { name="Stéphane Rossignol", email="stephane.rossignol@centralesupelec.fr" },
  { name="Jérémy Fix", email="jeremy.fix@centralesupelec.fr" },
]

description = "End to end Neural Diarization"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.urls]
"Homepage" = "https://github.com/paul-cayet/end-to-end-neural-diarization"
"Bug Tracker" = "https://github.com/paul-cayet/end-to-end-neural-diarization/issues"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
src = ["src"]
